[package]
name = "bevy_bobs"
version = "0.1.0"
edition = "2021"
authors = ["nithinmuthukumar", "MrPicklePinosaur"]
description = "Collection of utilities for bevy projects"
repository = "https://github.com/HalfPixelStudios/bevy_bobs"

[lib]

[dependencies]
bevy = { version = "0.8" }

rand = { version = "0.8.5" }
anyhow = "1.0.58"
thiserror = "1"
ron = "0.7.1"
serde = { version = "1", features = ["derive"] }

bevy-inspector-egui = { version = "0.12", optional = true }
bevy_kira_audio = { version = "0.12", default-features = false, features = [ "wav" ], optional = true }

[features]
default = ["all"]
all = ["prefab", "physics_2d", "spawn_wave", "attack_pattern", "health_bar", "sfx", "cursor", "grid"]

prefab = []
physics_2d = []
spawn_wave = []
attack_pattern = []
health_bar = []
sfx = ["dep:bevy_kira_audio"]
cursor = []
grid = []

egui = ["dep:bevy-inspector-egui"]
serde = []
